# OmegA-Architecture

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  EXTRACTION_MANIFEST.md  GEMINI.md  LICENSE  MANIFEST.md  ORIGIN.md  PUBLICATION_BUNDLE.md  README.md  SKILLS_ROADMAP.md  TRACEABILITY.md  map.sh  omega_equation_knowledge_graph.json  omega_kg_explorer.py  omegactl.py  package.json  pnpm-lock.yaml  verify.sh
alexa/: INDEX.md  README.md  index.mjs  interactionModel.json  skill.json
assets/: INDEX.md
canon/: CONSENSUS_ENGINE.md  INDEX.md  MEMORY_CONSTITUTION.md  OMEGA_IDENTITY.md  OXYSPINE_TRINITY.md  PEACE_PIPE_PROTOCOL.md  SECURITY_AND_PRIVACY.md
catalog/: INDEX.md  README.md  card-template.md  registry.json
distilled/: INDEX.md  sovereign_kernel_v1.jsonl
docs/: IMPLEMENTED_VS_PARTIAL.md  INDEX.md  OMEGA_IOS_SETUP.md  POLYGLOT_RUNTIME_ARCHITECTURE.md  POLYGLOT_RUNTIME_VALIDATION_REPORT.md  SECURITY_MODEL.md  omega-sovereign-build-brief.md  skill_persona_linter.md  skill_pub_packager.md
evals/: INDEX.md  OMEGA_EVAL_EVIDENCE_INDEX.md  OMEGA_EVAL_HANDOFF.md  TELEODYNAMIC_EVAL_PLAN.md  __init__.py  adversarial_harness.py  benchmark_harness.py  compare_baselines.py  conformance_report.json  failure_injection.py  final_evaluation_report.json  live_deployment_pressure_report.json  live_integration_report.json  live_route_isolation_report.json  omega_eval_handoff.json  omega_rc1_manifest.md  provider_isolation_report.json  test_aegis_identity.py  test_agent_telemetry.py  test_autonomous_repair.py  test_capabilities.py  test_conformance.py  test_cross_session_identity.py  test_ingest.py  test_live_deployment_pressure.py  test_live_ollama.py  test_live_route_isolation.py  test_memory_utility_growth.py  test_persona_linter.py  test_polyglot_runtime.py  test_providers.py  test_pub_packager.py  test_reconcile.py  test_runtime.py  test_teleodynamics.py  test_tickets_6_15.py
history/: INDEX.md  THE_WORDS_THAT_MATTERED.md  VISION_ORIGIN_JAN10_2026.md  histoRY.md
mcp/: INDEX.md  package-lock.json  package.json
omega/: INDEX.md  __init__.py  agent.py  answer.py  approvals.py  capabilities.py  claims.py  docstore.py  drift.py  envelope.py  executor.py  ingest.py  memory.py  phylactery.py  planner.py  policy.py  query_planner.py  reconcile.py  retrieval.py  risk_gate.py  runtime.py  security.py  session.py  tasks.py  telemetry.py  teleodynamics.py
papers/: ADCCL_Final_Paper.md  AEGIS_Final_Paper.md  AEON_Final_Paper.md  Canonical_Symbolic_Addendum.md  INDEX.md  MYELIN_Final_Paper.md  OmegA_Teleodynamic_Canon_Draft.md  OmegA_Teleodynamic_Technical_Draft.md  OmegA_Unified_Architecture_Paper.md  Sovereignty_Score.md  THE_OMEGA_ARCHITECTURE_CRITIQUE.md  THE_OMEGA_ARCHITECTURE_SPLIT_PLAN.md  The_Yettragrammaton.md  Yettragrammaton_Private_Addendum.md  hsca_paper_draft.md
policies/: INDEX.md  default.yaml  local_dev.yaml  strict.yaml
proofs/: .gitignore  Main.lean  OmegaProofs.lean  PROOF_MAP.md  README.md  STATUS.md  correspondence.py  fuzz_drift.py  fuzz_envelope.py  fuzz_memory.py  fuzz_phylactery.py  invariants.py  lake-manifest.json  lakefile.toml  state_machines.py
runtime/: .gitignore  Cargo.toml  INDEX.md  Makefile  omega-gateway.env.example  omega-gateway.service  omega-gateway.service.python-backup  omega-gateway.service.rust-ready  omega-gateway.service.systemd
runtime/.cargo/: config.toml
runtime/.github/workflows/: ci.yml
runtime/crates/omega-cli/: Cargo.toml
runtime/crates/omega-cli/src/: cli.rs  client.rs  config.rs  main.rs  ui.rs
runtime/crates/omega-cli/src/commands/: ask.rs  briefing.rs  chat.rs  completions.rs  config.rs  forward.rs  gains.rs  history.rs  inspect.rs  mod.rs  providers.rs  pulse.rs  warp.rs
runtime/crates/omega-consensus/: Cargo.toml
runtime/crates/omega-consensus/src/: lib.rs
runtime/crates/omega-core/: Cargo.toml
runtime/crates/omega-core/src/: agent.rs  economy.rs  error.rs  lib.rs  memory.rs  provider.rs  router.rs
runtime/crates/omega-gateway/: Cargo.toml
runtime/crates/omega-gateway/src/: agency.rs  config.rs  correction.rs  dream.rs  lib.rs  main.rs  state.rs
runtime/crates/omega-gateway/src/middleware/: auth.rs  mod.rs  policy.rs
runtime/crates/omega-gateway/src/routes/: chat.rs  consensus.rs  economy.rs  health.rs  ingest.rs  memory.rs  mod.rs  providers.rs  trace.rs
runtime/crates/omega-gateway/tests/: helpers.rs  integration_test.rs
runtime/crates/omega-identity/: Cargo.toml
runtime/crates/omega-identity/src/: dna.rs  lib.rs  soul.rs
runtime/crates/omega-memory/: Cargo.toml
runtime/crates/omega-memory/migrations/: 0001_initial.sql  0002_add_embedding.sql  0003_memory_provenance.sql  0004_add_economy.sql  0005_add_tier.sql  0006_add_retrieval_telemetry.sql
runtime/crates/omega-memory/src/: error.rs  federated.rs  gaing.rs  lib.rs  pg.rs  schema.rs  sqlite.rs  tiered.rs
runtime/crates/omega-memory/tests/: pg_store.rs  sqlite_store.rs
runtime/crates/omega-provider/: Cargo.toml
runtime/crates/omega-provider/src/: anthropic.rs  cli.rs  council.rs  deepseek.rs  failover.rs  gemini.rs  lib.rs  local.rs  openai.rs  openai_compat.rs  perplexity.rs  xai.rs
runtime/crates/omega-trace/: Cargo.toml
runtime/crates/omega-trace/migrations/: 0001_trace.sql  0002_expand_trace.sql  0003_add_teleodynamic_fields.sql
runtime/crates/omega-trace/src/: lib.rs  store.rs
runtime/crates/omega-trace/tests/: trace_store.rs
runtime/docs/: tiered-memory.md
runtime/eval/: registry.json
runtime/eval/results/: rc1_e10_eval_2026-03-14.md  rc1_e11_eval_2026-03-14.md  rc1_e12_pressure_eval_2026-03-27.md  rc1_e13_provider_isolation_2026-03-27.md  rc1_e14_route_isolation_2026-03-27.md  rc1_e3_eval_2026-03-14.md  rc1_e4_eval_2026-03-14.md  rc1_e5_eval_2026-03-14.md  rc1_e6_eval_2026-03-14.md  rc1_e7_eval_2026-03-14.md  rc1_e8_eval_2026-03-14.md  rc1_e9_eval_2026-03-14.md
runtime/path/to/: say_alive.py
runtime/r/: omega_sovereign_stats.R
runtime/releases/: omega_rc1_manifest.md
runtime/scripts/: benchmark.sh  install-systemd-omega-gateway.sh  supabase_memory_schema.sql  verify-gateway.sh
(+191 files in other folders)
