[workspace]
members = [
    "crates/omega-core",
    "crates/omega-provider",
    "crates/omega-gateway",
    "crates/omega-cli",
    "crates/omega-memory",
    "crates/omega-consensus",
    "crates/omega-identity",
    "crates/omega-trace",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["env", "toml"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dashmap = { version = "5", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "timeout"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Use rustls so Postgres `sslmode=require` works (Supabase pooler requires TLS).
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros"] }
wiremock = "0.6"
tokio-test = "0.4"
livekit = "0.7.34"
livekit-api = "0.4.16"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
