[package]
name = "omega-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
omega-core = { path = "../omega-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
